# picnic_in_the_city

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt  Чек-лист исполнения тест-задания.md
migration/: env.py
migration/versions/: 0541d7feea26_add_reason_field_to_picnic.py  16bcefe99a61_add_relationship_picnic_and_user.py  36ff736d8bb5_initial.py  9e948ab3f490_add_cascade_delete.py  ac555fee5aa6_add_user_and_picnic.py  d7409ec540a5_add_created_at_and_updated_at.py
src/: .env_example  database.py  main.py  settings.py
src/dependencies/: __init__.py  database.py
src/models/: __init__.py  models.py
src/routers/: __init__.py  city.py  picnic.py  user.py
src/schemas/: base.py  city.py  picnic.py  picnic_user.py  user.py
src/services/: city_service.py  logging_service.py  picnic_service.py  picnic_user_service.py  user_service.py
